--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -9,14 +9,15 @@
 }
 
 .tooltip {
-    position: absolute;
     z-index: 4;
+    position: absolute;
+    top: 52vh;
     left: 16px;
     width: 100vw;
-    height: 100px;
+    height: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     text-align: center;
 }
