--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,21 +19,42 @@
 .title {
   cursor: pointer;
 }
-
 .title:hover {
   color : blueviolet;
 }
 
-.profile {
+.button {
+  position: relative;
   cursor: pointer;
   height: 48px;
+  min-width: 48px;
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0 12px;
   background-color: mediumpurple;
   border-radius: 10px;
+  margin-right: 10px;
+  border: solid 1px blanchedalmond;
+}
+.button:hover {
+  background-color: blueviolet;
+  color: blanchedalmond;
 }
 
-.profile:hover {
-  background-color: blueviolet;
-  color: whitesmoke;
+.tooltip {
+  display: none;
+  position: absolute;
+  top: calc(100% + 5px);
+  font-size: 14px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(120, 120, 120, 0.7);
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  z-index: 1;
+}
+.button:hover .tooltip {
+  display: block; /* Affiche le tooltip lorsque le bouton est survolé */
 }
